@@ -1,0 +1,9 @@
+namespace Altinoren.ActiveWriter
+{
+    using Microsoft.VisualStudio.Shell;
+
+    public interface IDialogPageProvider
+    {
+        DialogPage GetDialogPage<T>();
+    }
+}
