@@ -38,17 +38,24 @@ namespace <#= CodeGenerationUtilities.GetPackageNamespace(this.Dsl) #>
     [ProvideLoadKey("Standard", "1.0", Constants.ProductName, Constants.CompanyName, 1)]
     [ProvideCodeGenerator(typeof(ActiveWriterTemplatedCodeGenerator), "ActiveWriterCodeGenerator", "Altinoren ActiveWriter code generator for .actiw files", true, ProjectSystem = ProvideCodeGeneratorAttribute.CSharpProjectGuid)]
     [ProvideCodeGenerator(typeof(ActiveWriterTemplatedCodeGenerator), "ActiveWriterCodeGenerator", "Altinoren ActiveWriter code generator for .actiw files", true, ProjectSystem = ProvideCodeGeneratorAttribute.VisualBasicProjectGuid)]
+    [ProvideOptionPage(typeof(ActiveWriterOptions), Altinoren.ActiveWriter.Common.OptionPageCategory, Altinoren.ActiveWriter.Common.OptionPageSubCategory, 101, 120, true)]
+    [ProvideProfileAttribute(typeof(ActiveWriterOptions), Altinoren.ActiveWriter.Common.OptionPageCategory, Altinoren.ActiveWriter.Common.OptionPageSubCategory, 101, 120, true)]
 	[VSShell::ProvideMenuResource("1000.ctmenu", 4)]
 	[VSShell::ProvideToolboxItems(1)]
 	[VSTextTemplatingHost::ProvideDirectiveProcessor(typeof(global::<#= this.Dsl.Namespace #>.<#= directiveName #>DirectiveProcessor), global::<#= this.Dsl.Namespace #>.<#= directiveName #>DirectiveProcessor.<#= directiveName #>DirectiveProcessorName, "A directive processor that provides access to <#= directiveName #> files")]
 	[global::System.Runtime.InteropServices.Guid(Constants.<#= dslName #>PackageId)]
-	internal sealed partial class <#= dslName #>Package : <#= dslName #>PackageBase
+	internal sealed partial class <#= dslName #>Package : <#= dslName #>PackageBase, Altinoren.ActiveWriter.IDialogPageProvider
 	{
 		protected override void Initialize()
 		{
 			base.Initialize();
 			
 			this.AddToolWindow(typeof(Altinoren.ActiveWriter.ToolWindow.ActiveWriterClassDetailsToolWindow));
+		}
+		
+		public DialogPage GetDialogPage<T>()
+		{
+			return GetDialogPage(typeof(T));
 		}
 	}
 }
