@@ -137,6 +137,9 @@
   <data name="110" xml:space="preserve">
     <value>Visual designer for Castle ActiveRecord and NHibernate</value>
   </data>
+  <data name="120" xml:space="preserve">
+    <value>General</value>
+  </data>
   <data name="201" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\File.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
